fixed alignment of projects

--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -127,7 +127,9 @@ img:hover {
     -webkit-filter: grayscale(80%);
     filter: grayscale(80%);
 }
-
+.container{
+    text-align: center;
+}
 #projPage {
     background: url("./project.jpg");
     background-size: contain;
